--- a/tareas/tarea_01/main.tex
+++ b/tareas/tarea_01/main.tex
@@ -7,7 +7,7 @@
 %\usepackage{fullpage}
 \usepackage{hyperref}
     \hypersetup{colorlinks=true,citecolor=blue,urlcolor =black,linkbordercolor={1 0 0}}
-
+\usepackage{cleveref}
 \newenvironment{statement}[1]{\smallskip\noindent\color[rgb]{1.00,0.00,0.50} {\bf #1.}}{}
 \allowdisplaybreaks[1]
 
@@ -29,6 +29,18 @@
 \newtheorem*{remark}{Observaci\'on}
 \newtheorem*{notation}{Notaci\'on}
 \newtheorem*{note}{Nota}
+
+\usepackage{listings}
+\usepackage[usenames,dvipsnames]{color}
+
+% Keywords command
+\providecommand{\keywords}[1]
+{
+  \bigskip
+  \textbf{Keywords} #1
+}
+
+\crefname{lemma}{Lema}{Lemas}
 
 % Define tus comandos para hacer la vida más fácil.
 \newcommand{\BR}{\mathbb R}
@@ -116,6 +128,96 @@
       \end{align*}
   \end{enumerate}
 \end{proof}
+
+\begin{statement}{2}
+  Demostrar que $e^{c I  + A} = e^c e^A$, para todos los escalares $c$ y todas las matrices cuadradas $A$.
+\end{statement}
+
+\begin{proof}
+  Tenemos que $(c I) A = c (I A) = c (A I) = (A I) c = A (I c) = A (c I)$ conmutan,
+  por lo que $e^{c I + A} = e^{c I} e^A$. Asimismo, tenemos
+  \begin{align*}
+    e^{cI} &= \sum_{i = 0}^{\infty} \frac{(c I)^i}{i!}\\
+    &= \sum_{i = 0}^{\infty} \frac{c^i I}{i!}\\
+    &= \left(\sum_{i = 0}^{\infty} \frac{c^i}{i!}\right) I\\
+    &= e^c I.
+  \end{align*}
+  De este modo, al utilizar la \'ultima igualdad logramos
+  \begin{align*}
+    e^{c I + A} &= e^{c I} e^A\\
+    &= (e^c I) e^A\\
+    &= e^c (I e^A)\\
+    &= e^c e^A.
+  \end{align*}
+\end{proof}
+
+\begin{statement}{3}
+  Si $A^2 = A$, encontrar una f\'ormula para $e^A$.
+\end{statement}
+
+\begin{proof}
+  Probemos el siguiente lema para proceder:
+  \begin{lemma}\label{lem01}
+    Si $A^2 = A$, entonces $A^n = A$, para todo $n \geq 2$.
+  \end{lemma}
+  \begin{proof}
+    Procedamos a realizar la prueba por inducci\'on.
+    Para $n = 2$ nos lo han dado de regalo.
+    Supongamos que se cumple para $n \geq 2$.
+    Luego $A^{n + 1} = A^n A = A A = A^2 = A$.
+  \end{proof}
+  Finalmente, desarollemos $e^A$ y utilicemos \cref{lem01}
+  \begin{align*}
+    e^A &= I + \sum_{i = 1}^{\infty} \frac{A^i}{i!}\\
+    &= I + \sum_{i = 1}^{\infty} \frac{A}{i!}\\
+    &= I + A \sum_{i = 1}^{\infty} \frac{1}{i!}\\
+    &= I + A (e - 1).
+  \end{align*}
+\end{proof}
+
+\begin{statement}{4}
+  Calcular $e^A$ para las matrices
+\end{statement}
+
+\begin{enumerate}
+  \item
+    $ A = \begin{pmatrix} a & b \\ 0 & a \end{pmatrix}$:
+    Sea $B = \begin{pmatrix}0 & b \\ 0 & 0\end{pmatrix}$,
+    reescribamos $A = a I + B$.
+    Utilizando el resultado del segundo ejercicio tenemos
+    $
+      e^A = e^{aI + B} = e^a e^B.
+    $
+    Asimismo, $B^2 = \Theta$, por lo que
+    \[
+      e^A = e^a \sum_{i = 0}^{\infty} \frac{B^i}{i!} = e^a (I + B) =
+      \begin{pmatrix} e^a & b e^a \\ 0 & e^a \end{pmatrix}.
+    \]
+  \item
+    $ A = \begin{pmatrix} a & b \\ 0 & 0 \end{pmatrix}$:
+    Probemos que $A^n = a^{n - 1} A$ para $n \geq 1$ utilizando inducci\'on.
+    Para $n = 1$ es trivial. Supongamos que se cumple para $n$. As\'i
+    $
+    A^{n + 1} = A^n A = a^{n - 1} A A =
+    a^{n - 1} \begin{pmatrix} a^2 & ab \\ 0 & 0 \end{pmatrix} =
+    a^n \begin{pmatrix} a & b \\ 0 & 0 \end{pmatrix} =
+    a^n A.
+    $
+    Finalmente,
+    \begin{align*}
+      e^A &= I + \sum_{i = 1}^{\infty} \frac{A^i}{i!}\\
+      &= I + A \sum_{i = 1}^{\infty} \frac{a^{i - 1}}{i!}\\
+      &= I + \frac{1}{a} A \sum_{i = 1}^{\infty} \frac{a^i}{i!}\\
+      &= I + \frac{1}{a} A (e^a - 1)\\
+      &= \begin{pmatrix} e^a & \frac{b}{a}(e^a - 1) \\ 0 & 1\end{pmatrix}.
+    \end{align*}
+  \item
+    $A = \begin{pmatrix} a & 0 \\ b & 0 \end{pmatrix}$:
+    F\'acilmente observamos que la matriz dada es la transpuesta del inciso anterior, por lo que
+    \[
+      e^A = \begin{pmatrix} e^a & 0 \\ \frac{b}{a}(e^a - 1) & 1 \end{pmatrix}.
+    \]
+\end{enumerate}
 
 \end{document}
 
